fixed logo header line spacing

--- a/frontend/src/scss/splash.scss
+++ b/frontend/src/scss/splash.scss
@@ -23,4 +23,5 @@
     color: $logo-blue;
     font-size: 125px;
     font-family: 'Farro', sans-serif;
+    line-height: 1.2;
 }
